[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=1]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=2]
[ext_resource path="res://act2/scene4/playereat.gd" type="Script" id=3]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=5]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=6]
[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=7]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=9]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=10]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=11]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=12]
[ext_resource path="res://sprites/act 2 setting/scene 4/bred2.png" type="Texture" id=13]
[ext_resource path="res://sprites/act 2 setting/scene 4/bred1.png" type="Texture" id=14]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=15]
[ext_resource path="res://sprites/act 2 setting/scene 4/wall.png" type="Texture" id=16]
[ext_resource path="res://sprites/characters/jump 2.png" type="Texture" id=17]
[ext_resource path="res://sprites/act 2 setting/scene1/path.png" type="Texture" id=18]
[ext_resource path="res://act2/scene4/bred.gd" type="Script" id=19]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=21]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=22]
[ext_resource path="res://sounds/fast-pace-Typing-on-mechanical-keyboard-1-www.FesliyanStudios.com.wav" type="AudioStream" id=23]
[ext_resource path="res://sprites/characters/consume.png" type="Texture" id=24]
[ext_resource path="res://act2/scene4/fg.gd" type="Script" id=25]
[ext_resource path="res://act2/scene4/bake.gd" type="Script" id=26]
[ext_resource path="res://sounds/Creepy Dungeon Ambience Background Audio Sound Effects.wav" type="AudioStream" id=27]
[ext_resource path="res://sounds/Walking-on-Gravel--Fast--www.fesliyanstudios.com.wav" type="AudioStream" id=28]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2741.96, 488.778 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "eat",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 152.224
height = 335.47

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 205.604, 971.1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2987.65, 324.766 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 294.979, 1536.04 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 26 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2025.08, 1088.43 )
scale = Vector2( 1.04461, 1.04957 )
z_index = -4
texture = ExtResource( 16 )

[node name="bred" type="Area2D" parent="."]
script = ExtResource( 19 )

[node name="Label" type="Label" parent="bred"]
margin_left = 1824.97
margin_top = 346.268
margin_right = 2538.97
margin_bottom = 607.269
custom_fonts/font = SubResource( 1 )
text = "take bread"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="bred"]
position = Vector2( 1920.94, 1066.02 )
z_index = -1
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bred"]
position = Vector2( 2281.4, 1513.83 )
z_index = 1
shape = SubResource( 3 )

[node name="dialoguebox" type="Control" parent="bred"]
margin_left = 676.845
margin_top = 164.321
margin_right = 716.845
margin_bottom = 204.321
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="bred/dialoguebox"]
margin_left = 488.0
margin_top = 1442.0
margin_right = 3075.0
margin_bottom = 1848.0
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="bred/dialoguebox"]
margin_left = 757.423
margin_top = 1496.26
margin_right = 2716.42
margin_bottom = 1780.26
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="bred/dialoguebox"]
position = Vector2( 2099.41, 1389.75 )
scale = Vector2( 1.71952, 2.5376 )
texture = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bred/dialoguebox/continuesprite"]

[node name="Type" type="AudioStreamPlayer" parent="bred/dialoguebox"]
stream = ExtResource( 23 )

[node name="Tween" type="Tween" parent="bred/dialoguebox"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1685.72, 1157.02 )
z_index = -2
texture = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 2050.98, 1100.57 )
scale = Vector2( 0.529918, 1.03379 )
z_index = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 2018.24, 421.33 )
scale = Vector2( 1.12998, 1 )
z_index = 1
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" type="KinematicBody2D" parent="."]
z_index = -1
script = ExtResource( 3 )

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 344.514, 1717.7 )
frames = SubResource( 5 )
animation = "eat"
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 305.763, 1704.96 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
limit_left = 500
limit_top = 0
limit_right = 3840
limit_bottom = 2160

[node name="Walk" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource( 28 )
volume_db = 1.608
pitch_scale = 0.79

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -396.375, 1181.24 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3831.17, 1133.43 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2220.02, 2313.69 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -334.745, 1359.15 )
shape = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -19.69

[connection signal="body_entered" from="bred" to="bred" method="_on_bred_body_entered"]
[connection signal="body_exited" from="bred" to="bred" method="_on_bred_body_exited"]
[connection signal="tween_completed" from="bred/dialoguebox/Tween" to="bred" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
